scrolling loads data

--- a/static/App.css
+++ b/static/App.css
@@ -30,6 +30,10 @@ hr {display: none; visibility: hidden;}
     *zoom: 1;
 }
 
+.hidden {
+  display: none;
+}
+
 body {
   background-color: #ffdc01;
   width: 100vw;
