--- a/static/Playlist.css
+++ b/static/Playlist.css
@@ -1,12 +1,10 @@
-.playlist-wrapper {
+.playlist {
   width: 21rem;
-  margin: 1rem;
+  margin: 10px;
   position: relative;
   border: 3px solid #333;
   padding: 3px;
-}
 
-.playlist {
   text-decoration: none;
   position: relative;
   display: block;
@@ -21,8 +19,8 @@
 
 .playlist-text {
   position: absolute;
-  top: 6px;
-  left: 6px;
+  top: 9px;
+  left: 9px;
   background-color: white;
   padding: 6px;
   border: 3px solid #ffd500;
@@ -44,19 +42,20 @@
   font-size: 16px;
 }
 
-.playlist-wrapper button {
+.playlist .open {
   padding: 0.5rem 1.5rem;
   background-color: #333;
   color: #ffd500;
   position: absolute;
-  right: 6px;
-  bottom: 6px;
+  right: 9px;
+  bottom: 9px;
   border: 3px solid #ffd500;
   font-size: 18px;
   font-weight: bold;
   cursor: pointer;
+  text-decoration: none;
 }
 
-.playlist-wrapper button:hover {
+.playlist .open:hover {
   background-color: #555;
 }
