--- a/static/App.css
+++ b/static/App.css
@@ -84,7 +84,6 @@ header p {
   content: '1';
   border-radius: 50%;
   background-color: #333;
-  color: #ffd500;
   width: 2rem;
   height: 2rem;
   display: inline-block;
@@ -189,4 +188,18 @@ header p {
   87.5% {
     box-shadow: 0em -2.6em 0em 0em rgba(0, 0, 0, 0.2), 1.8em -1.8em 0 0em rgba(0, 0, 0, 0.2), 2.5em 0em 0 0em rgba(0, 0, 0, 0.2), 1.75em 1.75em 0 0em rgba(0, 0, 0, 0.2), 0em 2.5em 0 0em rgba(0, 0, 0, 0.2), -1.8em 1.8em 0 0em rgba(0, 0, 0, 0.5), -2.6em 0em 0 0em rgba(0, 0, 0, 0.7), -1.8em -1.8em 0 0em #333;
   }
+}
+
+/* colors */
+
+body {
+  background-color: rgba(255, 140, 110, 1.0)
+}
+
+.playlist-text, .load-more, .playlist .open  {
+  border: 3px solid rgba(255, 140, 110, 1.0);
+}
+
+.step:before, .playlist .open, .load-more {
+  color: rgba(255, 140, 110, 1.0);
 }
